a little bit of responsive

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous"
   >
-  <link rel="stylesheet" href="./global.css">
+  <link rel="stylesheet" href="styles/global.css">
   <!-- Importing Styles End -->
 
 </head>
@@ -36,7 +36,7 @@
   <main class="d-flex flex-column px-0">
 
     <!-- Play Part -->
-    <div class="min-vh-100">
+    <div class="">
       <!-- Energizer -->
       <div class="container my-4 p-2">
         <div class="ratio ratio-16x9">
@@ -55,8 +55,8 @@
     
     <!-- Cards for Topics -->
     <div class="min-vh-100">
-      <div class="container h-50">
-        <div class="row" style="margin-top: 100px;">
+      <div class="container h-50 mt-5">
+        <div class="row">
 
           <div class="col-md mb-2 d-flex px-lg-2">
             <div class="card" style="width: 100%">
