--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h5 class="card-title">A World with Many Climates</h5>
                 <p class="card-text">Global climate refers to the long-term patterns and trends of weather conditions, including
                   temperature, precipitation, wind patterns, and other atmospheric factors, on a global scale.</p>
-                <a href="#" class="btn btn-primary">Let's Discuss more</a>
+                <a href="pages/first.html" class="btn btn-primary">Let's Discuss more</a>
               </div>
             </div>
           </div>
