--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                   monthly averages of temperature and precipitation was devised by the famous German scientist
                   Waldimir Köppen (1846‒1940).
                 </p>
-                <a href="#" class="btn btn-primary">Let's Discuss more</a>
+                <a href="pages/second.html" class="btn btn-primary">Let's Discuss more</a>
               </div>
             </div>
           </div>
