--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p class="card-text">The global pattern of climate refers to the distribution of different climate types across the Earth’s
                   surface.The global climate can be broadly classified into several major types based on temperature...
                 </p>
-                <a href="#" class="btn btn-primary">Let's Discuss more</a>
+                <a href="pages/third.html" class="btn btn-primary">Let's Discuss more</a>
               </div>
             </div>
           </div>
