summary and reference

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- End of Play Part-->
     
     <!-- Cards for Topics -->
-    <div class="min-vh-100">
+    <div class="mb-4">
       <div class="container h-50 mt-5">
         <div class="row">
 
@@ -107,6 +107,57 @@
       
     </div>
     <!-- End Cards for Topic -->
+
+    <div class="roboto-bold text-center py-1 mt-1">
+      <h2>Summary</h2>
+    </div>
+
+    <div class="container text-right" style="font-size: 18px;">
+      In this chapter, we examined global temperature and precipitation patterns, as well as the various
+      climatic regions throughout the world. Tropical climates are found in low latitudes, where the noon sun
+      is always high, day and night are of nearly equal length, every month is warm, and no real winter
+      season exists. Some of the rainiest places in the world exist in the tropics, especially where warm,
+      humid air rises upslope along mountain ranges.
+      <br><br>
+      Dry climates prevail where potential evaporation and transpiration exceed precipitation. Some
+      deserts, such as the Sahara, are mainly the result of sinking air associated with the subtropical highs,
+      while others, due to the rain shadow effect, are found on the leeward side of mountains. Many deserts
+      form in response to both of these effects.
+      <br><br>
+      Middle latitudes are characterized by a distinct winter and summer season. Winters tend to be milder
+      in lower latitudes and more severe in higher latitudes. Along the east coast of some continents,
+      summers tend to be hot and humid as moist air sweeps poleward around the subtropical highs. The air
+      often rises and condenses into afternoon thunderstorms in this humid subtropical climate. The west
+      coasts of many continents tend to be drier, especially in summer, as the combination of cool ocean
+      water and sinking air of the subtropical highs, to a large degree, inhibit the formation of cumuliform
+      clouds.
+      <br><br>
+      In the middle of large continents, such as North America and Eurasia, summers are usually wetter
+      than winters. Winter temperatures are generally lower than those experienced in coastal regions. As
+      one moves northward, summers become shorter and winters longer and colder. Polar climates prevail
+      at high latitudes, where winters are severe and there is no real summer. When ascending a high
+      mountain, one can travel through many climatic zones in a relatively short distance.
+    </div>
+
+    <div class="roboto-bold text-center py-1 mt-1">
+      <h2>Reference</h2>
+    </div>
+
+    <div class="container text-right" style="font-size: 18px;">
+      Essential of Meteorology (p 339- p 370) <br>
+      https://www.koppen-map.com/ Köppen‒Geiger Climate Classification Map <br>
+      https://pin.it/2svFL5KN6https://www.google.com/search?client=ms-android-
+      transsion&sca_esv=69e2b19d7f8e4a38&sxsrf=ACQVn09OKwR6H3ySNLa6MEoEtKM1ACSEzQ:17085026
+      09582&q=MOIST+CONTINENTAL+CLIMATES&tbm=isch&source=lnms&prmd=ivsnbmtz&sa=X&ved=2ah
+      UKEwiMgpGZ_LuEAxU2sVYBHcO0BDIQ0pQJegQICxAB&biw=360&bih=668&dpr=3  <br>
+      https://www.google.com/search?client=ms-android-
+      transsion&sca_esv=69e2b19d7f8e4a38&sxsrf=ACQVn08swI9A4tVYZGA4EPPqoas7at577g:1708502703
+      996&q=moist+subtropical+mid-
+      latitude+climates&tbm=isch&source=lnms&prmd=ivsnbmtz&sa=X&ved=2ahUKEwitvpPG_LuEAxWgklY
+      BHTakBoYQ0pQJegQIDxAB&biw=360&bih=668&dpr=3
+      <br> <br>
+    </div>
+
 
 
   </main>
