--- a/pages/third.html
+++ b/pages/third.html
@@ -33,7 +33,7 @@
     <!-- Main Content -->
   <main class="d-flex flex-column px-0 min-vh-100">
     <div class="container p-5">
-      <a href="/" class="btn btn-primary roboto-bold py-2 px-4 mb-4" style="font-size: 24px;">
+      <a href="../index.html" class="btn btn-primary roboto-bold py-2 px-4 mb-4" style="font-size: 24px;">
         Back
       </a>
       <div class="roboto-regular mb-2" style="font-size: 24px;">
