revised on global pattern of climate

--- a/pages/third.html
+++ b/pages/third.html
@@ -53,24 +53,33 @@
         <img src="../images/trop-climate.jpg" class="d-block" alt="high mountain">
       </div>
 
-
-      <div class="roboto-regular my-2" style="font-size: 24px;">
-        General characteristics: year-round warm temperatures (all months have a mean temperature above
-        18°C, or 64°F); abundant rainfall (typical annual average exceeds 150 cm, or 59 in.).
+      <div class="roboto-regular pt-4" style="font-size: 24px;">
+        Major types (based on seasonal distribution of rainfall):
+        <b>Tropical wet (Af)</b>, <b>tropical monsoon (Am)</b>, and <b>tropical Wet and dry (Aw)</b>.
         <br/> <br/>
-      </div>
-
-      <div class="p-2 d-flex justify-content-center my-2"> 
-        <img src="../images/trop.jpg" class="d-block" alt="high mountain">
       </div>
 
       <div class="roboto-regular pt-4" style="font-size: 24px;">
-        Extent: northward and southward from the equator to about latitude 15° to 25°.
-        <br/> <br/>
-        Major types (based on seasonal distribution of rainfall):
-        <b>Tropical rainforest (Af)</b>, <b>tropical monsoon (Am)</b>, and <b>ropical Wet and dry (Aw)</b>.
+        <b>1. Tropical Wet Climate (Af): </b>The tropical wet climate is characterized by
+        high temperatures and abundant rainfall throughout the year. 
+        It is typically found in equatorial regions.
         <br/> <br/>
       </div>
+
+      <div class="roboto-regular pt-4" style="font-size: 24px;">
+        <b>2. Tropical Monsoon Climate (Am): </b>The tropical monsoon
+         climate is characterized by distinct wet and dry seasons.
+         It is typically found in regions adjacent to the tropical wet climate.
+        <br/> <br/>
+      </div>
+
+      <div class="roboto-regular pt-4" style="font-size: 24px;">
+        <b>3. Tropical Wet and Dry Climate (Aw): </b>The tropical wet and dry 
+        climate is characterized by distinct wet and dry seasons, but with less 
+        rainfall overall compared to the tropical wet climate. It is typically found in regions on the fringes of the tropical wet climate.
+        <br/> <br/>
+      </div>
+
 
       <div class="text-center roboto-bold mb-2">
         <h2>DRY CLIMATES</h2>
@@ -80,39 +89,23 @@
         <img src="../images/dry-climate.jpg" class="d-block" alt="high mountain">
       </div>
 
-      <div class="roboto-regular my-2" style="font-size: 24px;">
-        General characteristics: deficient precipitation most of the year; potential evaporation and
-        transpiration exceed precipitation.
+      <div class="roboto-regular pt-4" style="font-size: 24px;">
+        Major types: <b>arid (BW) </b>—the “true desert”—and <b> semiarid (BS)</b>.
         <br/> <br/>
-      </div>
-
-      <div class="p-2 d-flex justify-content-center my-2"> 
-        <img src="../images/dry.jpg" class="d-block" alt="high mountain">
       </div>
 
       <div class="roboto-regular pt-4" style="font-size: 24px;">
-        Extent: the subtropical deserts extend from roughly 20° to 30° latitude in large continental regions of
-        the middle latitudes, often surrounded by mountains.
-        <br/> <br/>
-        Major types: arid (BW) the “true desert”— <b>Hot Desert (BWh)</b>,  <b>Cold Desert (BWk)</b>, and  <b>semiarid (BS)</b>
-        - <b> Hot Semiarid (BSh) </b> and <b> Cold Semiarid (BSk) </b>.
-        <br/> <br/>
-        Did you know??? <br/> <br/>
-        The driest major city in the contiguous United States is Yuma, Arizona. Yuma has a total average
-        annual precipitation of 6.5 cm (2.6 in.)—it rains there only about 17 days a year.
+        <b>1. Arid Climate (BW):  </b> Arid climates are commonly referred to as “true deserts.” 
+        They are characterized by extremely low precipitation levels and high evaporation rates, 
+        resulting in dry and barren landscapes. 
         <br/> <br/>
       </div>
 
-      <div class="roboto-regular my-2" style="font-size: 24px;">
-        <b>Desert with clouds and drizzle </b> <br><br>
-        It refers to the occurrence of clouds and light rain in an otherwise arid desert environment. It
-        is a rare and fascinating phenomenon that brings moisture to typically dry regions.
+      <div class="roboto-regular pt-4" style="font-size: 24px;">
+        <b>2. Semiarid climates: </b> are transitional regions between arid and more humid climates.
+         They receive slightly more precipitation than arid regions but still have 
+         limited water availability. 
         <br/> <br/>
-      </div>
-
-
-      <div class="p-2 d-flex justify-content-center my-2"> 
-        <img src="../images/coastal-des.jpg" class="d-block" alt="high mountain">
       </div>
 
       <div class="text-center roboto-bold mb-2 mt-4">
@@ -123,25 +116,32 @@
         <img src="../images/trop-moist.jpeg" class="d-block" alt="high mountain">
       </div>
 
-      <div class="roboto-regular my-2" style="font-size: 24px;">
-        General characteristics: humid with mild winters (i.e., average temperature of the coldest month
-        below 18°C, or 64°F, and above ‒3°C, or 27°F).
+      <div class="roboto-regular pt-4" style="font-size: 24px;">
+        Major types: <b>humid subtropical (Cfa)</b>,<b> marine (Cfb)</b>, And <b>dry-summer subtropical</b>, or <b> Mediterranean (Cs)</b>.
         <br/> <br/>
       </div>
-
-      <div class="p-2 d-flex justify-content-center my-2"> 
-        <img src="../images/trop-moist-precip.jpg" class="d-block" alt="high mountain">
-      </div>
-
 
       <div class="roboto-regular pt-4" style="font-size: 24px;">
-        Extent: on the eastern and western regions of most continents, from about 25° to 40° latitude.
-        <br/> <br/>
-        Major types: <b> humid subtropical (Cfa) </b>,<b>marine (Cfb)</b>, and <b>dry-summer subtropical</b>, or <b> Mediterranean
-       (s)</b>.
+        <b>1. Humid Subtropical Climate (Cfa):   </b> The humid subtropical climate is characterized by hot and humid summers, mild winters, and a relatively high amount
+         of precipitation throughout the year. It Is typically found in the
+         eastern coasts of continents.
         <br/> <br/>
       </div>
 
+      <div class="roboto-regular pt-4" style="font-size: 24px;">
+        <b>2. Marine Climate (Cfb): </b> The marine climate is characterized by mild, damp winters and cool summers. It is influenced by the proximity of large bodies of water, such 
+        as oceans or seas, which moderate the temperature. 
+        This climate type is often found in coastal regions.
+        <br/> <br/>
+      </div>
+
+      <div class="roboto-regular pt-4" style="font-size: 24px;">
+        <b>3. Dry-Summer Subtropical or Mediterranean Climate (Cs): </b> The dry-summer subtropical or Mediterranean climate is characterized by hot, dry summers and mild, 
+        wet winters. It is typically found in regions surrounding the Mediterranean Sea.
+        <br/> <br/>
+      </div>
+
+      
       <div class="text-center roboto-bold mb-2 mt-4">
         <h2>MOIST CONTINENTAL CLIMATES</h2>
       </div>
@@ -149,24 +149,29 @@
       <div class="p-2 d-flex justify-content-center my-2"> 
         <img src="../images/moist-cont.jpeg" class="d-block" alt="high mountain">
       </div>
-
-      <div class="roboto-regular my-2" style="font-size: 24px;">
-        General characteristics: warm-to-cool summers and cold winters (i.e., average temperature of
-        warmest month exceeds 10°C, or 50°F, and the coldest monthly average drops below ‒3°C, or 27°F);
-        winters are severe with snowstorms, blustery winds, bitter cold; climate controlled by large continent.
+   
+      <div class="roboto-regular pt-4" style="font-size: 24px;">
+        Major types: <b> humid continental with hot summers (Dfa)</b>, humid continental with cool summers (Dfb)</b>, And subpolar (Dfc)</b>.
         <br/> <br/>
       </div>
-
-      <div class="p-2 d-flex justify-content-center my-2"> 
-        <img src="../images/moist-cont-precip.jpg" class="d-block" alt="high mountain">
-      </div>
-
 
       <div class="roboto-regular pt-4" style="font-size: 24px;">
-        Extent: north of moist subtropical mid-latitude climates.
+        <b>1. Humid Continental Climate with Hot Summers (Dfa): </b> The humid continental climate with hot summers is characterized by warm to hot summers and cold winters. 
+        This climate type is typically found in the interior regions of continents, 
+        away from moderating influences of large bodies of water.
         <br/> <br/>
-        Major types: <b> humid continental with hot summers (Dfa)</b>, <b> humid continental with cool summers (Dfb) </b>,
-        and <b> subpolar (Dfc) </b>.
+      </div>
+
+      <div class="roboto-regular pt-4" style="font-size: 24px;">
+        <b>2. Humid Continental Climate with Cool Summers (Dfb): </b> The humid continental climate with cool summers is characterized by mild to cool summers and cold winters. 
+        This climate type is also found in the interior regions of continents,
+        but with cooler summer temperatures compared to the Dfa climate. 
+        <br/> <br/>
+      </div>
+
+      <div class="roboto-regular pt-4" style="font-size: 24px;">
+        <b>3. Subpolar Climate (Dfc): </b> The subpolar climate is characterized by short, cool summers and long, cold winters. 
+        This climate type is found in high-latitude regions near the poles.  
         <br/> <br/>
       </div>
 
@@ -179,56 +184,23 @@
          class="d-block w-75" alt="high mountain">
       </div>
 
-      <div class="roboto-regular my-2" style="font-size: 24px;">
-        General characteristics: year-round low temperatures (i.e., average temperature of the warmest
-        month is below 10°C, or 50°F).
-        <br/> <br/>
-      </div>
-
-      <div class="p-2 d-flex justify-content-center my-2"> 
-        <img src="../images/polar-climate-precip.jpg" class="d-block" alt="high mountain">
-      </div>
-
-
       <div class="roboto-regular pt-4" style="font-size: 24px;">
-        Extent: northern coastal areas of North America and Eurasia; Greenland and Antarctica.
-        <br/> <br/>
         Major types: <b>polar tundra (ET) </b> and  <b>polar ice caps (EF)</b>.
         <br/> <br/>
       </div>
 
-      <div class="text-center roboto-bold mb-2 mt-4">
-        <h2>HIGHLAND CLIMATES</h2>
+      <div class="roboto-regular pt-4" style="font-size: 24px;">
+        <b>1. Polar Tundra Climate (ET): </b> The polar tundra climate is characterized by extremely cold temperatures and a short, cool summer season.
+         It is typically found in high-latitude regions near the Earth’s poles.  
+        <br/> <br/>
       </div>
 
-      <div class="p-2 d-flex justify-content-center my-2"> 
-        <img src="../images/high-land.jpeg"
-         class="d-block" alt="high mountain">
+      <div class="roboto-regular pt-4" style="font-size: 24px;">
+        <b>2. Polar Ice Caps Climate (EF): </b> The polar ice caps climate is characterized by extremely cold temperatures and permanent ice cover. 
+        It is found in the regions near the Earth’s poles. 
+        <br/> <br/>
       </div>
 
-      <div class="roboto-regular my-2" style="font-size: 24px;">
-        Highland climates, categorized under Group H in the Köppen climate classification system, refer to
-        climates found in mountainous or high-elevation regions. 
-        <br/> <br/>
-        <b>General Characteristics:</b>
-        <br/> <br/>
-        - Highland climates are influenced by elevation, topography, and local weather patterns, rather than
-        solely by latitude.
-        <br/> <br/>
-        - Temperatures tend to decrease with increasing altitude, resulting in cooler conditions compared to
-        nearby lowland areas.
-        <br/> <br/>
-        - Precipitation patterns can vary widely, with some highland areas experiencing high rainfall or
-        snowfall due to orographic lifting, while others may be relatively dry.
-        <br/> <br/>
-        <b>Extent:</b>
-        <br/> <br/>
-        - Highland climates can be found in mountainous regions across the globe.
-        <br/> <br/>
-        - They are not limited to specific latitudes but are determined by the presence of significant
-        variations in elevation.
-        <br/> <br/>
-      </div>
     </div>
   </main>
 
